# wjr-2015-github_shell

./: .gitignore  CHANGELOG.md  LICENSE  README - 中文版.md  README.md  RELEASE_GUIDE.md  __init__.py  main.py  pyproject.toml  setup.py  test_features.py  test_return_param.py
.github/workflows/: release.yml
commands/: org_commands.py  repo_commands.py  user_commands.py
developer_tools/: README.md  build_package.py  release.py  run_tests.py  switch_to_developer_mode.py  test_protection_simple.py  test_user_mode_protection.py
github_shell/: main.py
github_shell/commands/: __init__.py  org_commands.py  rate_limit.py  repo_commands.py  search_commands.py  update_commands.py  user_commands.py
github_shell/tests/: test_config.py  test_dependency_manager.py  test_email_verification.py  test_features.py  test_return_param.py  test_stop_command.py  test_system_commands.py  test_tamper_proof.py
github_shell/tests/developer/: test_protection_simple.py  test_user_mode_protection.py
github_shell/utils/: __init__.py  config.py  dependency_manager.py  email_verification.py  encryption.py  history.py  language.py  path_utils.py  request_utils.py  tamper_proof.py
tests/: test_github_shell.py  test_language.py  test_repo_commands.py
utils/: config.py  dependency_manager.py  language.py  request_utils.py
