[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-shell"
version = "0.1.0"
authors = [
    { name = "wjr-2015", email = "wangjinrui_150328@126.com" }
]
description = "A GitHub simulation shell with automatic update feature"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[project.scripts]
github-shell = "github_shell.main:main"

[project.urls]
Homepage = "https://github.com/wjr-2015/github-shell"
Repository = "https://github.com/wjr-2015/github-shell"
